--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -57,104 +57,6 @@
         .btn:hover {
             background-color: #45a049;
         }
-    </style>
-</head>
-<body>
-    <header>
-        <h1>كورسات مجانية لتعلم البرمجة واللغة الإنجليزية وغيرها</h1>
-    </header>
-
-    <div class="course-list">
-        <!-- كورس البرمجة -->
-        <div class="course">
-            <h3>دورة تعلم البرمجة</h3>
-            <p>تعلم أساسيات البرمجة بلغات مثل Python و JavaScript.</p>
-            <a href="https://www.youtube.com/watch?v=06h470AiBZ4"" class="btn" target="_blank">ابدأ الدورة</a>
-        </div>
-
-        <!-- كورس اللغة الإنجليزية -->
-        <div class="course">
-            <h3>دورة تعلم اللغة الإنجليزية</h3>
-            <p>دورة لتعلم اللغة الإنجليزية من الصفر حتى الاحتراف.</p>
-            <a href="https://www.youtube.com/playlist?list=PLp22-4PivYmIFAnru_L7fnMhSV5YffLTZ" class="btn" target="_blank">ابدأ الدورة</a>
-        </div>
-
-        <!-- كورس آخر -->
-        <div class="course">
-            <h3>دورة تعلم HTML و CSS</h3>
-            <p>تعلم أساسيات HTML و CSS لبناء مواقع الويب.</p>
-            <a href="https://www.youtube.com/watch?v=aHzw_8wWl48" class="btn" target="_blank">ابدأ الدورة</a>
-        </div>
-   <!-- كورس آخر -->
-   <div class="course">
-    <p>تعلم أساسيات HTML و CSS لبناء مواقع الويب.</p>
-    <a href="https://www.youtube.com/watch?v=aHzw_8wWl48" class="btn" target="_blank">ابدأ الدورة</a>
-   
-   
-   
-   
-    </div>
-    
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>كورسات مجانية</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f4f4f9;
-            direction: rtl;
-        }
-        header {
-            background-color: #4CAF50;
-            color: white;
-            text-align: center;
-            padding: 10px 0;
-        }
-        header img {
-            width: 100px; /* حجم اللوجو */
-            margin-bottom: 10px;
-        }
-        .course-list {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: space-around;
-            margin: 20px;
-        }
-        .course {
-            background-color: white;
-            border: 1px solid #ddd;
-            margin: 10px;
-            padding: 20px;
-            width: 280px;
-            border-radius: 8px;
-            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-            transition: transform 0.3s ease;
-        }
-        .course:hover {
-            transform: scale(1.05);
-        }
-        .course h3 {
-            margin: 10px 0;
-        }
-        .course p {
-            color: #555;
-        }
-        .btn {
-            background-color: #4CAF50;
-            color: white;
-            padding: 10px;
-            text-align: center;
-            width: 100%;
-            text-decoration: none;
-            border-radius: 5px;
-            display: block;
-            margin-top: 15px;
-        }
-        .btn:hover {
-            background-color: #45a049;
-        }
 
         /* صفحة ثانية */
         .about-section {
@@ -203,21 +105,21 @@
         <div class="course">
             <h3>دورة تعلم البرمجة</h3>
             <p>تعلم أساسيات البرمجة بلغات مثل Python و JavaScript.</p>
-            <a href="https://www.youtube.com/watch?v=كود_الفيديو" class="btn" target="_blank">ابدأ الدورة</a>
+            <a href="https://www.youtube.com/watch?v=06h470AiBZ4" class="btn" target="_blank">ابدأ الدورة</a>
         </div>
 
         <!-- كورس اللغة الإنجليزية -->
         <div class="course">
             <h3>دورة تعلم اللغة الإنجليزية</h3>
             <p>دورة لتعلم اللغة الإنجليزية من الصفر حتى الاحتراف.</p>
-            <a href="https://www.youtube.com/watch?v=كود_الفيديو" class="btn" target="_blank">ابدأ الدورة</a>
+            <a href="https://www.youtube.com/playlist?list=PLp22-4PivYmIFAnru_L7fnMhSV5YffLTZ" class="btn" target="_blank">ابدأ الدورة</a>
         </div>
 
         <!-- كورس HTML و CSS -->
         <div class="course">
             <h3>دورة تعلم HTML و CSS</h3>
             <p>تعلم أساسيات HTML و CSS لبناء مواقع الويب.</p>
-            <a href="https://www.youtube.com/watch?v=كود_الفيديو" class="btn" target="_blank">ابدأ الدورة</a>
+            <a href="https://www.youtube.com/watch?v=aHzw_8wWl48" class="btn" target="_blank">ابدأ الدورة</a>
         </div>
     </div>
 
@@ -225,11 +127,8 @@
     <div class="about-section">
         <h2>تعرف على المزيد عن الموقع</h2>
         <img src="animated_image.gif" alt="صورة متحركة">
-        <p>هنا يمكنك العثور على الكورسات التي ستساعدك على تعلم العديد من المهارات. تصفح الكورسات واستفد من المحتوى المجاني المتاح لك.</p>
+        <p>هنا يمكنك العثور على الكورسات التي ستساعدك على تعلم العديد من المهارات. تصفح الكورسات واستفد من المحتوى</p>
         <a href="صفحة_الكورسات.html">التوجه إلى صفحة الكورسات</a>
     </div>
-
-
-
 </body>
 </html>
